[tool.poetry]
name = "c3toctrack"
version = "0.1.0"
description = ""
authors = ["Stefan Bethke <stb@lassitu.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
gpxpy = "^1.5.0"
paho-mqtt = "^1.6.1"
atomicwrites = "^1.4.1"
geojson = "^3.0.1"
python-dateutil = "^2.8.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
